# Memex

./: .gitignore  CLAUDE.md  Progress-Tracker.md  README.md
capture_api/: .dockerignore  Dockerfile  README.md  pyproject.toml
capture_api/app/: auth.py  config.py  db.py  files.py  logging.py  main.py  schemas.py
capture_api/app/migrations/: 001_initial.sql
capture_api/app/routes/: capture.py  health.py  queue.py
capture_api/tests/: conftest.py  test_auth.py  test_capture_file.py  test_capture_text.py  test_capture_url.py  test_capture_voice.py  test_concurrency.py  test_config.py  test_files_and_logging.py  test_health.py  test_migrations.py  test_queue_listing.py  test_queue_single.py
dashboard/: Dockerfile  README.md  pyproject.toml
dashboard/backend/: __init__.py  app.py  auth.py  claude_runner.py  config.py  db.py  frontmatter.py  logging.py  schemas.py  taxonomy_io.py  vault.py
dashboard/backend/prompts/: retrieve.md
dashboard/backend/routers/: __init__.py  captures.py  health.py  inbox.py  queue.py  rate_limit.py  retrieval.py  taxonomy.py
dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard/frontend/src/: App.tsx  main.tsx
dashboard/frontend/src/api/: client.ts  endpoints.ts
dashboard/frontend/src/components/: MarkdownViewer.tsx  SettingsDrawer.tsx  StatusChip.tsx
dashboard/frontend/src/components/Layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
dashboard/frontend/src/hooks/: useThemeMode.ts  useToken.ts
dashboard/frontend/src/pages/: Captures.tsx  Inbox.tsx  Queue.tsx  RateLimit.tsx  Retrieval.tsx  Taxonomy.tsx
dashboard/frontend/src/theme/: index.ts  overrides.ts  palette.ts  shadows.ts  typography.ts
dashboard/frontend/src/types/: api.ts
dashboard/tests/backend/: conftest.py  test_auth.py  test_captures.py  test_inbox.py  test_misc.py  test_queue.py  test_rate_limit.py  test_retrieval.py  test_taxonomy.py  test_vault_safety.py
dashboard/tests/frontend/: pages.test.tsx  retrieval.e2e.spec.ts  retrieval.test.tsx  setup.ts
docs/: deployment.md  installation.md
infra/: .env.example  docker-compose.yml
scripts/: bootstrap.sh  fix-vault-permissions.sh  teardown.sh
scripts/lib/: claude_login.sh  prompt.sh
telegram_bot/: .dockerignore  Dockerfile  README.md  pyproject.toml
telegram_bot/bot/: __init__.py  auth.py  capture_client.py  claude_runner.py  config.py  downloads.py  intent.py  logging.py  main.py  queue_reader.py  rendering.py  telemetry.py
telegram_bot/bot/handlers/: __init__.py  capture_attachment.py  capture_text.py  capture_url.py  commands.py  retrieval.py
telegram_bot/prompts/: retrieve.md
telegram_bot/tests/: conftest.py  test_capture_attachment.py  test_capture_text.py  test_capture_url.py  test_commands.py  test_config.py  test_intent_dispatch.py  test_logging.py  test_main_dispatch.py  test_rendering.py  test_retrieval.py  test_telemetry.py  test_whitelist.py
tests/compose/: test_bootstrap.bats  test_compose_config.py  test_env_coverage.py
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
worker/migrations/: 001_claude_calls.sql
worker/prompts/: file.md
worker/tests/: conftest.py  test_claude_runner_failures.py  test_confidence_routing.py  test_config.py  test_file_binary.py  test_file_text.py  test_logging.py  test_main_loop.py  test_rate_limit.py  test_recovery.py  test_taxonomy_reload.py  test_text.py  test_url_article.py  test_url_youtube.py  test_vault_writer.py  test_voice.py
worker/worker/: __init__.py  claude_runner.py  config.py  db.py  logging.py  main.py  rate_limit.py  recovery.py  taxonomy.py  vault_writer.py
worker/worker/handlers/: __init__.py  exceptions.py  file.py  text.py  url_article.py  url_youtube.py  voice.py
