[project]
name = "memex-dashboard"
version = "1.0.0"
description = "Memex dashboard: FastAPI backend + React frontend for queue/inbox/taxonomy/captures/rate-limit/retrieval."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.prompts" = ["*.md"]
"backend.migrations" = ["*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests/backend"]

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
skip_empty = true
