[project]
name = "memex-telegram-bot"
version = "1.0.0"
description = "Memex Telegram bot: unified capture + retrieval front-end."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=20.7,<21",
    "httpx>=0.25,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.setuptools.package-data]
"bot" = ["../prompts/*.md"]

[tool.pytest.ini_options]
addopts = "--cov=bot --cov-report=term-missing --cov-fail-under=85"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bot"]

[tool.coverage.report]
show_missing = true
skip_empty = true
