[project]
name = "memex-worker"
version = "1.0.0"
description = "Memex processing worker: dequeues captures, drives claude -p, files notes into the vault."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "trafilatura>=1.10",
    "yt-dlp>=2024.4.9",
    "pypdf>=4.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["worker*"]

[tool.setuptools.package-data]
"worker" = ["../prompts/*.md", "../migrations/*.sql"]

[tool.pytest.ini_options]
addopts = "--cov=worker --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["worker"]

[tool.coverage.report]
show_missing = true
skip_empty = true
